--- a/src/index.css
+++ b/src/index.css
@@ -14,6 +14,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   height: 100% !important;
+  background-color: #dee0e4;
 }
 
 code {
